# My-Expenses-Backend-FastAPI

./: .gitignore  README.md  main.py  models.py  pdf_parser.py  pyproject.toml  requirements.txt
.github/workflows/: backend_deploy.yml  ci.yml  supabase_sync.yml
core/: config.py  database.py  email.py  ml_classifier.py  otp.py  security.py
migrations/: 20260215_add_currency_to_users.sql  20260215_add_ml_feedback_user_and_indexes.sql  20260218_create_feedback_table.sql  20260306_add_budget_recurring_app_lock_tables.sql  20260309_add_email_verification_and_password_reset.sql  20260316_security_hardening.sql  20260411_add_category_budgets_and_transaction_tags.sql  20260413_rename_otp_to_otp_hash.sql  20260414_add_weekly_digest_settings.sql
models/: debts.py  transactions.py
routes/: ai.py  auth.py  category_budgets.py  debt_routes.py  feedback.py  health.py  onboarding.py  settings.py  transactions.py  upload.py
schemas/: ai.py  auth.py  feedback.py  onboarding.py  settings.py
services/: auth_service.py  langgraph_workflows.py  weekly_digest.py
tests/: conftest.py  test_ai_routes.py  test_auth_routes.py  test_health.py  test_ml_classifier.py  test_otp.py  test_pdf_parser.py  test_security.py  test_transaction_routes.py  test_upload_routes.py  test_weekly_digest_service.py
