[project]
name = "my-expenses-api"
version = "0.1.0"
description = "Expense Automation API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pdfplumber",
    "python-multipart",
    "supabase",
    "python-dotenv",
    "PyJWT[crypto]",
    "bcrypt",
    "slowapi",
    "pydantic[email]",
    "scikit-learn",
    "requests",
    "fastapi-cache2",
    "langgraph",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["venv", "__pycache__", "*.egg-info"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # do not perform function calls in argument defaults (FastAPI Depends pattern)
    "UP007", # Use X | Y for union types — keep Optional for readability
]

[tool.ruff.lint.isort]
known-first-party = ["core", "routes", "schemas", "models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

